# ChangeLog for media-libs/libnut
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libnut/ChangeLog,v 1.1 2007/03/18 19:18:07 beandog Exp $

*libnut-282 (18 Mar 2007)

  18 Mar 2007; Steve Dibb <beandog@gentoo.org> +metadata.xml,
  +libnut-282.ebuild:
  Initial import
