@@ -1,12 +1,17 @@
 DIST libnut-282.tar.bz2 60647 RMD160 37801dbfe57f952d68a270063ab548569ee793be SHA1 dbb905da8d36d206173a005280292d30707b6d00 SHA256 37a298d6b511bafd4ec1c179d5480137385d73e8c89ed2d674dd8a4fbb8c5bdf
+DIST libnut-503.tar.bz2 51908 RMD160 69f4f480d69cdb21fa1361dd9054840d6c48092c SHA1 b02890629ef1d66a5c1356b184f276e965f434ff SHA256 a07a7ee1c5dd427dcdcfff0bfa5e0c77ab082aff0afd422b1966287ee9d30e11
 EBUILD libnut-282.ebuild 806 RMD160 2f13f8bf563d680f73f6c8f8a84d1431109675ba SHA1 2294a6b0ce3cd2764019c537aa18db35b0df7773 SHA256 40128a6419865047d75ccabbe901742dc357dbdbae554006f45d34ac58caf9f7
 MD5 f509e6a0d428f67ef715863ea885f423 libnut-282.ebuild 806
 RMD160 2f13f8bf563d680f73f6c8f8a84d1431109675ba libnut-282.ebuild 806
 SHA256 40128a6419865047d75ccabbe901742dc357dbdbae554006f45d34ac58caf9f7 libnut-282.ebuild 806
-MISC ChangeLog 337 RMD160 d5fc25768f3c7110edf9fdc4e8f966a35543745d SHA1 78cf38e840a42bfc3bacfb03c3b60ad4e00c2800 SHA256 ba898f977c9006210f2881233f3e4c2e17911374596fa1bb030f600b6b3af477
-MD5 694a5907a7cdea73b997a2ac074c1515 ChangeLog 337
-RMD160 d5fc25768f3c7110edf9fdc4e8f966a35543745d ChangeLog 337
-SHA256 ba898f977c9006210f2881233f3e4c2e17911374596fa1bb030f600b6b3af477 ChangeLog 337
+EBUILD libnut-503.ebuild 704 RMD160 2a3e91d225e2983b69ba1f1cd375c7b89d85b130 SHA1 2eb6648a754f529af44affd737ad060e0a8b9899 SHA256 3b98ef3744fad57325575321248a468fd9076bd6cc60cb7a6ba123dc7a842b73
+MD5 c7b3591f7ee0f3bdccd880ccf4918010 libnut-503.ebuild 704
+RMD160 2a3e91d225e2983b69ba1f1cd375c7b89d85b130 libnut-503.ebuild 704
+SHA256 3b98ef3744fad57325575321248a468fd9076bd6cc60cb7a6ba123dc7a842b73 libnut-503.ebuild 704
+MISC ChangeLog 447 RMD160 26e78ebb8969199045c7d03b780e30592c40d8da SHA1 9c68380e0a3b8c64627a5f7764a0e2a05386c920 SHA256 d49dfed316e7593eb1daf456c6140974ed84932557d27c185e237db0168c28ac
+MD5 adf1d827d2085e06dffc318291bae984 ChangeLog 447
+RMD160 26e78ebb8969199045c7d03b780e30592c40d8da ChangeLog 447
+SHA256 d49dfed316e7593eb1daf456c6140974ed84932557d27c185e237db0168c28ac ChangeLog 447
 MISC metadata.xml 350 RMD160 5c81fe2f206f8ae7da26d906d241d3afa429120b SHA1 59353be2bbeb4c6bb1897a86042f944071378efd SHA256 375b46e5a09f621f706f84b03877b6629871526abbb60f4a01da4ede1979b808
 MD5 200e256300d0c2daffcb895c07609a9e metadata.xml 350
 RMD160 5c81fe2f206f8ae7da26d906d241d3afa429120b metadata.xml 350
@@ -14,3 +19,6 @@ SHA256 375b46e5a09f621f706f84b03877b6629871526abbb60f4a01da4ede1979b808 metadata
 MD5 6deba07aa483d215aa898a5dd9972589 files/digest-libnut-282 232
 RMD160 bd50f26c1f247563f9e2e3048d8bb1dbd4641b8d files/digest-libnut-282 232
 SHA256 5096ad3a2d85a8fa5e6a70021eae7fbf582783de2474f4b5c540d5e7ab280fdb files/digest-libnut-282 232
+MD5 5a372351c61866381ec0f31cb861b940 files/digest-libnut-503 232
+RMD160 594ddc9846f0e772c414aeb5b6466152ca962021 files/digest-libnut-503 232
+SHA256 63e4432b746026aa74c3698169e6c7c2fa1a0700debac49e8bbedd201d505bb2 files/digest-libnut-503 232
