@@ -1,0 +1,3 @@
+MD5 c8dd74dcf0aec40a04259309d510f320 libnut-503.tar.bz2 51908
+RMD160 69f4f480d69cdb21fa1361dd9054840d6c48092c libnut-503.tar.bz2 51908
+SHA256 a07a7ee1c5dd427dcdcfff0bfa5e0c77ab082aff0afd422b1966287ee9d30e11 libnut-503.tar.bz2 51908
